commit with wrapping issue in coach interface and user interface...

--- a/css/style.css
+++ b/css/style.css
@@ -6856,7 +6856,7 @@ h4.count-text{
 }
 
 .wrap-all{
-    word-break: break-all !important;
+    word-break: break-all;
 }
 
 .counter-item i{
